--- a/packages/volto-iframe-block/src/theme/main.scss
+++ b/packages/volto-iframe-block/src/theme/main.scss
@@ -32,6 +32,12 @@
   }
 }
 
-.block.iframe iframe {
-  width: 100%;
+.block.iframe {
+  figure {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  iframe {
+    width: 100%;
+  }
 }
