--- a/packages/volto-iframe-block/src/theme/main.scss
+++ b/packages/volto-iframe-block/src/theme/main.scss
@@ -30,6 +30,14 @@
       }
     }
   }
+
+  .invalid-url {
+  padding: 1.5em;
+  background: #f9edbe;
+  text-align: center;
+  }
+
+
 }
 
 .block.iframe {
